# brainlab

./: .gitignore  AGENTS.md  ARCHITECTURE.md  PROJECT_BRIEF.md  README.md  ROADMAP.md  pyproject.toml
brain_lab/: __init__.py  agent_loop.py  cli.py  db.py  llm.py  models.py  notes.py  provider_models.py  run_logs.py  tools.py
learning/: diagrams.md
tests/: test_agent_loop.py  test_cli.py  test_db.py  test_llm.py  test_notes.py  test_provider_models.py  test_run_logs.py  test_tools.py
