[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "brain-lab"
version = "0.1.0"
description = "A local-first notes CLI that grows into an agent lab."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.28.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
brain = "brain_lab.cli:app"

[tool.setuptools.packages.find]
include = ["brain_lab*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
